# WasteOptimiser

./: .gitignore  BenchEnv.ipynb  LICENSE  README.md  api.py  gcode-test.py  generator-test.py  main.py  run.py
benchmarks/: README.md  case_1_results.txt  case_2_results.txt
gui/: WasteOptimiserGUI.ui  figures.py  gui.py
modules/: arcinterpolator.py  gcodeparser.py  libnfporb_interface.pyd  spaceoptimiser.py
shapes/: 1-square.gcode  2-holder.gcode  3-square_round.gcode  4-star.gcode  5-triangle.gcode  6-slot_holder.gcode  7-U_shape.gcode  8-connector.gcode
wasteoptimiser/: __main__.py  requirements.txt
wasteoptimiser/api/: api.py
wasteoptimiser/gui/: figures.py  gui.py
wasteoptimiser/logger/: logger.py
wasteoptimiser/nfp_interface/: CMakeLists.txt  build.bat  libnfporb_interface.cpp
wasteoptimiser/optimiser/: localsearch.py  smallestenclosingcircle.py  spaceoptimiser.py
wasteoptimiser/parser/: arcinterpolator.py  gcodeparser.py
wasteoptimiser/resources/: WasteOptimiserGUI.ui
